--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -13,7 +13,14 @@ body {
     src: url(../fonts/PlaywriteMX-Regular.ttf);
 }
 
-
+#fa{
+    color: #a09d93;
+    font-size: 28px;
+    padding-left: 3px;
+    position: relative;
+    top: 20px;
+    left: 8px;
+}
 
 #header {
     background-image: url(../media/banner.png);
@@ -49,11 +56,39 @@ height: 7vh;
     pointer-events: none;
     color: #3a3939bb;
 }
-.input-border{
+.col-lg-11{
     /* border: 30px solid pink;
     border-image: url("../media/border.png") 30; */
     background-image: url(../media/border2.png);
-    background-size: contain;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
-    padding: 60px;
+    /* padding: 0  ; */
+}
+.icons{
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    height: 70px;
+    width: 70px;
+    align-items: start;
+   /* margin-top: 56px; */
+   /* border-radius: 50%; */
+}
+@media screen and (max-width: 575px) {
+    .smx {
+        width: 90% !important;
+    }
+    .smx2{
+        width: 10% !important;
+    }
+}
+
+.task{
+    margin: 50px;
+    padding: 10px 0 0 50px;
+    font-weight: 700;
+    font-family: "Playwrite MX", cursive;
+}
+.form-check-input{
+    background-color: #a09d93 !important;
 }
